--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-
-cmake_minimum_required (VERSION 3.9.0)
+set(CMAKE_MACOSX_RPATH 1)
+cmake_minimum_required (VERSION 2.8.0)
 
 project (DataAnalyser)
 include_directories (./src)
